toolbar z-index fix

--- a/source/style/sections/admin/_admin_header.scss
+++ b/source/style/sections/admin/_admin_header.scss
@@ -2,6 +2,8 @@
 
 .admin{
 
+  z-index: 10;
+
   &__logo{
     width: $avatar-size;
     height: $avatar-size;
